I reformatted the output of the file.

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1131,7 +1131,6 @@
     "        with open(f'models/{key}.pkl', 'wb') as f:  # open a text file\n",
     "            dump(model, f) \n",
     "\n",
-    "\n",
     "        print(f\"{key}: {model.score(support_test_x, support_test_target)}\")\n",
     "\n",
     "def cvAcurracies(X,y, models=models):\n",
@@ -1142,7 +1141,10 @@
     "        print(f\"{key}\")\n",
     "        print(classification_report(y, y_pred , target_names=[\"Deny\", \"Grant\"]))\n",
     "        tn, fp, fn, tp = confusion_matrix(y, y_pred).ravel()\n",
-    "        print(f\"{key}=>tn:{tn}, fp:{fp}, fn:{fn}, tp:{tp}\")\n"
+    "        print(f\"{key}=>tn:{tn}, fp:{fp}, fn:{fn}, tp:{tp}\")\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
