1. I added tfidf features and model prediction in p-script. 2. I also changed how to use p-script. Please refer to READ.Me soon for more details.

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -24,7 +24,8 @@
     "import torch\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.metrics import classification_report\n",
-    "from pickle import dump, load"
+    "from pickle import dump, load\n",
+    "import joblib"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,9 @@
     "\n",
     "summaries = pd.read_csv(\"dataset/summaries_embeddings.csv\", index_col= 0)\n",
     "\n",
-    "paired = pd.read_csv('dataset/paired_testset.csv', index_col=0)\n"
+    "paired = pd.read_csv('dataset/paired_testset.csv', index_col=0)\n",
+    "\n",
+    "testset = pd.read_csv('dataset/testset.csv', index_col=0)\n"
    ]
   },
   {
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +179,14 @@
    "source": [
     "### TFIDF\n",
     "\n",
-    "todo: convert Gordon's TFIDF's to format compatible to sklearns models this site might help : https://stackoverflow.com/questions/7922487/how-to-transform-numpy-matrix-or-array-to-scipy-sparse-matrix"
+    "todo: convert Gordon's TFIDF's to format compatible to sklearns models this site might help : https://stackoverflow.com/questions/7922487/how-to-transform-numpy-matrix-or-array-to-scipy-sparse-matrix\n",
+    "\n",
+    "question: Should i use different pipeplines / tfidfs for support and opposition?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +245,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.5598705501618123\n",
-      "RFT: 0.5501618122977346\n",
+      "RFT: 0.540453074433657\n",
       "KNN: 0.5339805825242718\n",
       "Logistic: 0.5210355987055016\n"
      ]
@@ -263,22 +268,25 @@
    ],
    "source": [
     "pipe = Pipeline([('count', CountVectorizer()),('tfid', TfidfTransformer())])\n",
-    "transformed_data = pipe.fit(support_x)\n",
     "\n",
-    "support_count_train = transformed_data['count'].transform(support_train_x)\n",
+    "transformed_pipe = pipe.fit(support_x)\n",
     "\n",
-    "support_tfid_train = transformed_data['tfid'].transform(support_count_train)\n",
+    "joblib.dump(transformed_pipe, 'pipes/support-tfidf.joblib')\n",
     "\n",
-    "support_count_test = transformed_data['count'].transform(support_test_x)\n",
+    "support_count_train = transformed_pipe['count'].transform(support_train_x)\n",
     "\n",
-    "support_tfid_test = transformed_data['tfid'].transform(support_count_test)\n",
+    "support_tfid_train = transformed_pipe.transform(support_train_x)\n",
     "\n",
-    "accuracies(support_tfid_train, support_train_target, support_tfid_test, support_test_target, feature_type='support-tfid')\n"
+    "support_count_test = transformed_pipe['count'].transform(support_test_x)\n",
+    "\n",
+    "support_tfid_test = transformed_pipe.transform(support_test_x)\n",
+    "\n",
+    "accuracies(support_tfid_train, support_train_target, support_tfid_test, support_test_target, feature_type='support-tfidf')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +294,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.5945945945945946\n",
-      "RFT: 0.5405405405405406\n",
+      "RFT: 0.5608108108108109\n",
       "KNN: 0.5067567567567568\n",
       "Logistic: 0.597972972972973\n"
      ]
@@ -311,18 +319,19 @@
     "\n",
     "# opposition\n",
     "\n",
-    "pipe = Pipeline([('count', CountVectorizer()),('tfid', TfidfTransformer())])\n",
-    "transformed_data = pipe.fit(oppose_x)\n",
+    "transformed_pipe = pipe.fit(oppose_x)\n",
     "\n",
-    "oppose_count_train = transformed_data['count'].transform(oppose_train_x)\n",
+    "joblib.dump(transformed_pipe, 'pipes/oppose-tfidf.joblib')\n",
     "\n",
-    "oppose_tfid_train = transformed_data['tfid'].transform(oppose_count_train)\n",
+    "oppose_count_train = transformed_pipe['count'].transform(oppose_train_x)\n",
     "\n",
-    "oppose_count_test = transformed_data['count'].transform(oppose_test_x)\n",
+    "oppose_tfid_train = transformed_pipe.transform(oppose_train_x)\n",
     "\n",
-    "oppose_tfid_test = transformed_data['tfid'].transform(oppose_count_test)\n",
+    "oppose_count_test = transformed_pipe['count'].transform(oppose_test_x)\n",
     "\n",
-    "accuracies(oppose_tfid_train, oppose_train_target, oppose_tfid_test, oppose_test_target, feature_type='opposition-tfid')\n"
+    "oppose_tfid_test = transformed_pipe.transform(oppose_test_x)\n",
+    "\n",
+    "accuracies(oppose_tfid_train, oppose_train_target, oppose_tfid_test, oppose_test_target, feature_type='opposition-tfidf')\n"
    ]
   },
   {
@@ -933,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +996,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.5469255663430421\n",
-      "RFT: 0.5275080906148867\n",
+      "RFT: 0.5533980582524272\n",
       "KNN: 0.5469255663430421\n",
       "Logistic: 0.5922330097087378\n",
       "LinearSVC: 0.540453074433657\n"
@@ -1005,12 +1014,12 @@
    "source": [
     "\n",
     "\n",
-    "accuracies(support_train_x, support_train_target, support_test_x, support_test_target,feature_type='support_sentence_embeddings')"
+    "accuracies(support_train_x, support_train_target, support_test_x, support_test_target,feature_type='support-sentence_embeddings')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1027,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.4594594594594595\n",
-      "RFT: 0.5304054054054054\n",
+      "RFT: 0.47635135135135137\n",
       "KNN: 0.5101351351351351\n",
       "Logistic: 0.44594594594594594\n",
       "LinearSVC: 0.4560810810810811\n"
@@ -1034,7 +1043,7 @@
     }
    ],
    "source": [
-    "accuracies(opposition_train_x, opposition_train_target, opposition_test_x, opposition_test_target,feature_type='opposition_sentence_embeddings')"
+    "accuracies(opposition_train_x, opposition_train_target, opposition_test_x, opposition_test_target,feature_type='opposition-sentence_embeddings')"
    ]
   },
   {
