Hypothesis testing script done

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.5945945945945946\n",
-      "RFT: 0.5608108108108109\n",
+      "RFT: 0.5371621621621622\n",
       "KNN: 0.5067567567567568\n",
       "Logistic: 0.597972972972973\n"
      ]
@@ -1252,6 +1252,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python3 p-script.py --data dataset/testset.csv --model_name KNN --feature tfidf\n",
+    "\n",
+    "python3 p-script.py --data dataset/testset.csv --model_name KNN --feature sentence_embeddings\n"
+   ]
   },
   {
    "cell_type": "markdown",
