--- a/prescript.ipynb
+++ b/prescript.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/oluwaseuncardoso/Desktop/Projects/venv/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# %%\n",
     "from transformers import pipeline, set_seed\n",
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,67 +260,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/jd/_y9k6hnx4658pxlgs6r0d1pr0000gn/T/ipykernel_62893/3194196368.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  testset['feature'].loc[testset[\"brief_type\"]==\"support\"] =   sparse_matrix.tolist()\n",
-      "/var/folders/jd/_y9k6hnx4658pxlgs6r0d1pr0000gn/T/ipykernel_62893/3194196368.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  testset['feature'].loc[testset[\"brief_type\"]==\"opposition\"] =   sparse_matrix.tolist()\n"
-     ]
-    }
-   ],
-   "source": [
-    "testset['feature'] = \"\"\n",
-    "\n",
-    "sparse_matrix = support_pipe.transform(testset[\"prompt\"].loc[testset[\"brief_type\"]==\"support\"]).toarray()\n",
-    "\n",
-    "testset['feature'].loc[testset[\"brief_type\"]==\"support\"] =   sparse_matrix.tolist()\n",
-    "\n",
-    "sparse_matrix = opposition_pipe.transform(testset[\"prompt\"].loc[testset[\"brief_type\"]==\"opposition\"]).toarray()\n",
-    "\n",
-    "testset['feature'].loc[testset[\"brief_type\"]==\"opposition\"] =   sparse_matrix.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6       [0.0, 0.006157324014675131, 0.0, 0.0, 0.0, 0.0...\n",
-       "10      [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "11      [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "13      [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "15      [0.009605672960387038, 0.005409826360636613, 0...\n",
-       "                              ...                        \n",
-       "1202    [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "1203    [0.013928380212276208, 0.0, 0.0, 0.0, 0.0, 0.0...\n",
-       "1207    [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "1209    [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "1213    [0.019706592557715102, 0.0, 0.0, 0.0, 0.0, 0.0...\n",
-       "Name: feature, Length: 309, dtype: object"
+       "(array([[0.4, 0.6]]), array(['grant'], dtype='<U163422'))"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "testset[\"feature\"].loc[(testset[\"brief_type\"]==\"support\") & (testset[\"data_type\"]==\"test\") ]"
+    "n = 1\n",
+    "clfs['sup'].predict_proba(x_support[n].reshape(1,-1)), clfs['sup'].predict(x_support[n].reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.8, 0.2]]), array(['deny'], dtype='<U163422'))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "clfs['sup'].predict_proba(x_support[n].reshape(1,-1)), clfs['sup'].predict(x_support[n].reshape(1,-1))"
    ]
   },
   {
