Deepset is too large for my computer (MPS-Mac), and some operations relies on a dtype of 64 bit size. Trying this on a Larger Cuda GPU

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Case 9:11-cv-80416-KLR Document 737 Entered on FLSD Docket 10/06/2015 Page 1 of 5\\n\\nUNITED STATES DISTRICT COURT\\nSOUTHERN DISTRICT OF FLORIDA\\nCASE NO.: 11-CV-80416-RYSKAMP\\nCORDELL CONSULTANTS, INC.\\nMONEY PURCHASE PLAN AND\\nTRUST, a Virginia corporation,\\nPlaintiff,\\nvs.\\nELIOT C. ABBOTT, et al.,\\nDefendants.\\n________________________________/\\nPLAINTIFF’S MOTION FOR LEAVE TO FILE SUPPLEMENTAL\\nSUMMARY JUDGMENT MATERIAL BASED ON EXPERT TESTIMONY\\nPlaintiff, Cordell Consultants, Inc. Money Purchase Plan and Trust (“Plaintiff”), hereby\\nmoves the Court to permit Plaintiff to supplement its summary judgment filings based on\\ntestimony from Defendants’ expert, Terry Spurlock (“Spurlock”), and Plaintiff’s rebuttal expert,\\nMark Kesselman, (“Kesselman”). In support, Plaintiff states:\\n1.\\n\\nDefendants’ expert witnesses Spurlock testified about a material and contested\\n\\nissue in this case, the plain falsity of Ed Okun’s (“Okun”) personal financial statement (“PFS”)\\nbased upon Okun’s failure to disclose the actual nature of his liabilities.1\\n2.\\n\\nPlaintiffs’ expert Kesselman has testified to the reasonableness of the due diligence\\n\\nperformed by Plaintiff prior to making the $7 Million loan. Kesselman contradicts the claims of\\n\\n1\\n\\nThe Okun PFS used to obtain the $7 Million loan from plaintiff lists $134 Million in liability to\\n1031 Tax Group, LLC for “Notes and Accounts Payable”. In actual fact, Okun had stolen the\\nmoney, not borrowed it. He stole the money from seven different QI companies, such as 1031\\nAdvance, Inc.---not from 1031 Tax Group, LLC. According to records actually reviewed by the\\ndefendant lawyers, as of December, 2006, Okun actually had taken more than $150 Million.\\nAccording to a March, 2007 e-mail from Janet Dashiell, President of the 1031 Tax Group, Inc.,\\nOkun had taken more than $162 Million. That e-mail was actually received and reviewed by\\ndefendants Kaplan and Abbott.\\n\\n\\x0cCase 9:11-cv-80416-KLR Document 737 Entered on FLSD Docket 10/06/2015 Page 2 of 5\\n\\nSpurlock regarding purported red flags and badges of fraud.\\n3.\\n\\nThe Court directed that both parties to this lawsuit may petition to file supplemental\\n\\nsummary judgment material as to Kesselman’s testimony. Given the timeline of events, Plaintiff\\nalso seeks leave to supplement its filings with Spurlock’s testimony. Since Plaintiff did not depose\\nSpurlock until after its summary judgment filings, the Court should allow Plaintiff to introduce\\nthis newly obtained testimony. Plaintiff deposed Spurlock on August 10, 2015. See D.E. 659.\\nNearly a week earlier, Plaintiff filed its final responses in Opposition to Defendants’ Motion for\\nSummary Judgment. See D.E. 649.2\\n4.\\n\\nAt his deposition, Spurlock testified to the following:\\n(i)\\n\\nOkun’s PFS included a box for “Other Contingent\\nLiabilities” and he was required to list all liabilities here\\n(Spurlock Depo. Tr., p. 39: ln. 5-18; p. 40: ln. 9-21);\\n\\n(ii)\\n\\nIf Okun were liable for fines or penalties, Spurlock would\\nnot expect these liabilities to be included under “Notes and\\nAccounts Payable” but would expect them to be listed\\n“elsewhere” on the PFS (Spurlock Depo. Tr., p. 54: ln. 1023);\\n\\n(iii)\\n\\nOkun’s PFS indicates that he is not the “borrower” of the\\nQualified Intermediary (“QI”) money but is simply a\\nguarantor (Spurlock Depo. Tr., p. 55: ln. 5-11). If Okun were\\na personal guarantor, this fact would have to be established\\nin writing or “it didn’t happen” (Spurlock Depo. Tr., p. 56:\\nln. 20-25);\\n\\n(iv)\\n\\nIf Okun was in default on the payment of his QI “notes,” that\\nwould “absolutely” be a material fact in the bank’s decision\\nto extend or not extend credit (Spurlock Depo. Tr., p. 57: ln.\\n2-10);3\\n\\n(v)\\n\\nA borrower’s PFS could be a closing document if—while “at\\nthe closing table”—a borrower is “asked to certify that there\\n\\nThis Motion was filed before the Clerk’s business day began on August 4, 2015.\\nIt is undisputed that Okun had defaulted in the repayment of most of the $150 Million in\\nindebtedness to the QI’s by December of 2006.\\n2\\n3\\n\\n2\\n\\n\\x0cCase 9:11-cv-80416-KLR Document 737 Entered on FLSD Docket 10/06/2015 Page 3 of 5\\n\\nis no change in his financial statement” (Spurlock Depo. Tr.,\\np. 65: ln. 11-19);4\\n\\n5.\\n\\n(vi)\\n\\nIf Spurlock learned that an asset listed on a borrower’s PFS\\nwas acquired with stolen money, he would not lend to that\\nborrower (Spurlock Depo. Tr., p. 66: ln. 15-21);\\n\\n(vii)\\n\\nIf a borrower were unable to convince its attorney to supply\\na written opinion letter, Spurlock would not lend to that\\nborrower unless “very strong reasons” were given for this\\nfailure (Spurlock Depo. Tr., p. 70: ln. 1-4);\\n\\n(i)\\n\\nA borrower is “required to disclose all liabilities, direct and\\ncontingent” (Spurlock Depo. Tr., p. 85: ln. 4-6);\\n\\n(ii)\\n\\nIf a borrower is unable to determine its true level of debt—\\nhaving produced various statements that contradict one\\nanother—this would be a “huge red flag” (Spurlock Depo.\\nTr., p. 85: ln. 7-13);\\n\\nSpurlock’s testimony about the falsity of Okun’s PFS goes to the very heart of\\n\\nDefendants’ Motion for Summary Judgment [D.E. 592], which Plaintiff opposes. Defendants\\nmake the argument that Okun’s financial statement was not fraudulent. Spurlock’s testimony, not\\navailable at the time of plaintiff’s response to the summary judgment motion, makes it clear that\\nthe Okun PFS was fraudulent.\\n6.\\n\\nKesselman’s testimony is also material to Defendants’ affirmative defenses of in\\n\\npari delicto, unclean hands, and intervening cause, which Plaintiff has sought to exclude on\\nsummary judgment. See D.E. 189; D.E. 603. Plaintiff contends that Defendants were aware of\\nfalsities in Okun’s financial statement that Plaintiff was unaware of. Kesselman establishes that\\nthe Okun PFS does not reveal that Okun is ‘borrowing’ from any Q.I. company, but has instead\\nbecome indebted to a holding company called 1031 Tax Group, LLC and that there is no per se\\nprohibition against a Q.I. investing funds it holds.\\n\\n4\\n\\nPlaintiff testified that the attorney for Okun from the defendant law firm represented to Plaintiff\\nthat there had been no adverse material change in Okun’s financial condition.\\n3\\n\\n\\x0cCase 9:11-cv-80416-KLR Document 737 Entered on FLSD Docket 10/06/2015 Page 4 of 5\\n\\n7.\\n\\nKesselman rebuts defendant’s contentions regarding Okun’s purported defaults in\\n\\nthe payment of other loans from Plaintiff. He establishes why there either was no default or why\\nOkun’s late payments on other loans were immaterial. Kesselman establishes that lenders do not\\ninvestigate the legality of the borrower’s business transactions and that Plaintiff’s due diligence in\\nmaking the subject loan was appropriate in the circumstances.\\n8.\\n\\nPlaintiff did not have the benefit of either Spurlock or Kesselman’s relevant and\\n\\nmaterial testimony before its summary judgment filings. Therefore, Plaintiff respectfully requests\\nthat the Court grant Plaintiff leave to file a single supplemental motion in support of its Motion for\\nPartial Summary Judgment and in opposition to Defendants’ Motion for Summary Judgment.\\n9.\\n\\nPlaintiff request leave to file the deposition testimony of both Spurlock and\\n\\nKesselman together with a brief analysis of their testimony and its significance to summary\\njudgment issues.\\nCERTIFICATE OF GOOD FAITH CONFERENCE\\nI HEREBY CERTIFY that counsel for the movant has attempted in good faith to confer with all\\nparties who may be affected by the relief sought in this motion to resolve the issues raised. Responding,\\nEdward Shohat, the attorney for Steven Silverman, stated that he opposed the motion. Counsel for the\\nremaining defendants did not respond.\\n\\nCERTIFICATE OF SERVICE\\nI HEREBY CERTIFY that on October 6, 2015, I electronically filed the foregoing\\ndocument with the Clerk of the Court using the CM/ECF system. I also certify that the foregoing\\ndocument is being served this day on all counsel of record or pro se parties identified on the\\nattached Service List in the manner specified, either via transmission of Notices of Electronic\\nFiling generated by CM/ECF or in some other authorized manner for those counsel or parties who\\nare not authorized to receive electronically transmitted notices of electronic filings.\\n/s/___Jimmy W. Mintz\\nIrwin R. Gilbert (Fla. Bar #099473)\\nJimmy W. Mintz (Fla. Bar #113363)\\nKelley Kronenberg\\nAttorneys for Plaintiff\\n1475 Centrepark Blvd. Ste. 275\\nWest Palm Beach, FL 33401\\n4\\n\\n\\x0cCase 9:11-cv-80416-KLR Document 737 Entered on FLSD Docket 10/06/2015 Page 5 of 5\\n\\nTel. 561.684.5956\\nFax. 561.684.5753\\nigilbert@kelleykronenberg.com\\njmintz@kelleykronenberg.com\\nService List\\nSteven C. Marks, Esq.\\nFla. Bar No.: 516414\\nsmarks@podhurst.com\\nRamon Rasco, Esq.\\nFla. Bar No.: 0617334\\nrrasco@podhurst.com\\nPodhurst Orseck, PA.\\nCity National Bank Building, 8th Floor\\n25 West Flagler Street\\nMiami, FL 33130\\nTelephone: (305) 358-2800\\nFacsimile: (305) 358-2382\\nCounsel for Defendant Eliott C. Abbot\\n\\nDeborah S. Corbishley, Esq.\\nFla. Bar No.: 588229\\ndcorbishley@kennynachwalter.com\\nRichard H. Critchlow, Esq.\\nFla. Bar No.: 155227\\nrcritchlow@kennynachwalter.com\\nKenny Nachwalter, P.A.\\n201 South Biscayne Boulevard\\nSuite 1100\\nMiami, FL 33131\\nTelephone: (305) 373-1000\\nFacsimile: (305) 372-1861\\nCounsel for Defendants Abbey L. Kaplan and\\nSteve I. Silverman\\n\\nHoward D. DuBosar, Esq.\\nFla. Bar No.: 729108\\ndubosarh@dubolaw.com\\nThe DuBosar Law Group, P.A.\\nAttorneys for Kluger Peretz Kaplan & Berlin, P.L.\\n1800 N. Military Trail, Suite 470\\nBoca Raton, FL 33431\\nTelephone: (561) 544-8980\\nFacsimile: (561) 544-8988\\nCounsel for Defendant, Kluger, Peretz,\\nKaplan & Berlin, P.L.\\n\\nMarilyn G. Kohn, Esq.\\nFla. Bar No.: 168009\\nmkohn@klugerkaplan.com\\nKluger, Kaplan, Silverman,\\nKatzen & Levine, P.L.\\n201 S. Biscayne Blvd., 17th Floor\\nMiami, Florida 33131\\nPhone: (305) 379-9000\\nFacsimile: (305) 379-3428\\nCounsel for Defendants, Abbey L. Kaplan and\\nSteve I. Silverman\\nEdward R. Shohat, Esq.\\nFla. Bar No.: 152634\\neshohat@joneswalker.com\\nJones Walker\\n201 S. Biscayne Blvd\\nTwenty Sixth Floor\\nMiami, Florida 33131\\nTelephone: (305) 679-5700\\nFacsimile: (305) 679-5710\\nCo-counsel for Defendant Steve I. Silverman\\n\\n5\\n\\n\\x0c',\n",
+       "       'deny', 'train'], dtype='<U163422')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "support_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +266,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.5598705501618123\n",
-      "RFT: 0.540453074433657\n",
+      "RFT: 0.5533980582524272\n",
       "KNN: 0.5339805825242718\n",
       "Logistic: 0.5210355987055016\n"
      ]
@@ -271,6 +292,7 @@
     "\n",
     "transformed_pipe = pipe.fit(support_x)\n",
     "\n",
+    "#save pipe for future use\n",
     "joblib.dump(transformed_pipe, 'pipes/support-tfidf.joblib')\n",
     "\n",
     "support_count_train = transformed_pipe['count'].transform(support_train_x)\n",
@@ -286,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +316,7 @@
      "output_type": "stream",
      "text": [
       "SGD: 0.5945945945945946\n",
-      "RFT: 0.5371621621621622\n",
+      "RFT: 0.543918918918919\n",
       "KNN: 0.5067567567567568\n",
       "Logistic: 0.597972972972973\n"
      ]
@@ -1293,7 +1315,25 @@
     "\n",
     "https://arxiv.org/pdf/1703.06114.pdf\n",
     "\n",
-    "https://arxiv.org/pdf/2104.13478.pdf  --- read first"
+    "https://huggingface.co/docs/transformers/model_doc/perceiver\n",
+    "\n",
+    "https://www.youtube.com/watch?v=Xe7VT8-kDzg\n",
+    "\n",
+    "https://github.com/krasserm/perceiver-io\n",
+    "\n",
+    "https://www.youtube.com/watch?v=YBkOILybiNo\n",
+    "\n",
+    "https://www.youtube.com/watch?v=9ymIqU4XnhY\n",
+    "\n",
+    "https://paperswithcode.com/paper/set-transformer-a-framework-for-attention#code\n",
+    "\n",
+    "https://www.inference.vc/deepsets-modeling-permutation-invariance/\n",
+    "\n",
+    "https://medium.com/@albertoarrigoni/paper-review-code-deep-sets-5f87d335f16f\n",
+    "\n",
+    "https://medium.com/@albertoarrigoni/paper-review-code-set-transformer-b9750e5c3fdb\n",
+    "\n",
+    "https://www.youtube.com/watch?v=wTZ3o36lXoQ&t=199s"
    ]
   },
   {
